--- a/Linux/x86_64/CMakeLists.txt
+++ b/Linux/x86_64/CMakeLists.txt
@@ -76,6 +76,7 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
 elseif(CMAKE_BUILD_TYPE STREQUAL "Sanitize")
     target_compile_options(${PROJECT_NAME} PRIVATE ${SANITIZE_FLAGS} ${COMMON_WARNINGS})
     target_link_options(${PROJECT_NAME} PRIVATE ${SANITIZE_FLAGS})
+    target_compile_definitions(${PROJECT_NAME} PRIVATE NEO_LSAN_ENABLED)
 elseif(CMAKE_BUILD_TYPE STREQUAL "Fuzz")
     target_compile_options(${PROJECT_NAME} PRIVATE ${FUZZ_FLAGS} ${COMMON_WARNINGS})
     target_link_options(${PROJECT_NAME} PRIVATE ${FUZZ_FLAGS})
